Complete Clients page

--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -28,7 +28,7 @@
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="2 minutes">
+        <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybilmayard.tech/6-reasons-to-use-shopify" />
         <link rel="stylesheet" href="styles.css" type="text/css">
@@ -101,7 +101,8 @@
         <div class="main section">
             <div class="container-1000">
                 <p>Are you planning to sell your products or services online? Consider choosing 
-                    Shopify, one of the most popular e-commerce platforms. Here I present to 
+                    <a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
+                        Shopify</a>, one of the most popular e-commerce platforms. Here I present to 
                     you a few of the benefits you can enjoy.</p>
 
                 <h2>Customisable Themes</h2>
@@ -121,7 +122,7 @@
                     However, there are many reasons why you’d want to extend the functionality 
                     of your store. You may want to integrate your store with an ESP (email 
                     ervice provider). Or, you might need to translate your store into foreign 
-                    languages. Fortunately, the <a href="https://appss.shopify.com/" target="_blank" 
+                    languages. Fortunately, the <a href="https://apps.shopify.com/" target="_blank" 
                     rel="noopener noreferrer">Shopify App Store</a> solves many of these problems. 
                     Within this marketplace, you can find over 4,500 apps to add features to your 
                     store. Many of these apps are free or offer a range of pricing plans to suit 
@@ -142,8 +143,8 @@
                 <p>Shopify offers a variety of plans, so you’re sure to find pricing that suits 
                     your needs. I recommend beginning with the Basic plan, which costs just 
                     $29/month. You can upgrade or downgrade at any time if your current plan 
-                    isn’t suitable for you. These are some of the benefits you can enjoy with a
-                    ll plans:</p>
+                    isn’t suitable for you. These are some of the benefits you can enjoy with all 
+                    plans:</p>
 
                 <ul>
                     <li>A free SSL certificate that doesn’t expire</li>
@@ -246,7 +247,7 @@
                             <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
+                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
                 <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
