--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="2 minutes">
+        <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybilmayard.tech/" />
         <link rel="stylesheet" href="styles.css" type="text/css">
@@ -105,8 +105,8 @@
             <div class="container-1000">
                 <h2 class="center">What Do I Offer?</h2>
                 <hr>
-                <p class="container-700 padding-top center">If you’re looking for help with setting up a website for the first time, or 
-                    you have an existing site that you want to optimise, I offer a service that’s 
+                <p class="container-700 padding-top center">If you're looking for help with setting up a website for the first time, or 
+                    you have an existing site that you want to optimise, I offer a service that's 
                     right for you:</p>
                 <div class="row">
                     <div class="col-6">
@@ -136,22 +136,29 @@
         <div class="clients section grey">
             <h2>Portfolio</h2>
             <hr>
-            <p class="container-700 padding-top center">A selection of clients I have recently worked with:</p>
+            <p class="container-700 padding-top center">A selection of clients I have recently 
+                worked with:</p>
             <div class="row">
                 <div class="col-3">                        
-                    <img src="images/clients/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching">
+                    <a href="clients.html#audrey-zeitoun-coaching">
+                        <img src="images/clients/Audrey-Zeitoun-Coaching.png" 
+                        alt="Audrey Zeitoun Coaching"></a>
                     <h4>Audrey Zeitoun Coaching</h4>
                 </div>
                 <div class="col-3">                    
-                <img src="images/clients/KYOSK.png" alt="KYOSK">
-                <h4>KYOSK</h4>
+                <a href="clients.html#find-the-balance"><img src="images/clients/find-the-balance.PNG" 
+                    alt="Find the Balance"></a>
+                <h4>Find the Balance</h4>
                 </div>
                 <div class="col-3">                       
-                    <img src="images/clients/Pathways-21.png" alt="Pathways 21">
+                    <a href="clients.html#pathways-21"><img src="images/clients/Pathways-21.png" 
+                        alt="Pathways 21"></a>
                     <h4>Pathways 21</h4>
                 </div>
                 <div class="col-3">                    
-                <img src="images/clients/The-GDPR-Compliance-Consultancy.png" alt="The GDPR Compliance Consultancy">
+                    <a href="clients.html#gdpr-compliance-consultancy">
+                        <img src="images/clients/The-GDPR-Compliance-Consultancy.png" 
+                        alt="The GDPR Compliance Consultancy"></a>
                 <h4>The GDPR Compliance Consultancy</h4>
                 </div>
             </div>
@@ -161,7 +168,7 @@
         </div>
         <div class="events section">
             <div class="container-1000">
-                <h2 class="center">NEW! How to Build a Business with Shopify 2020/21</h2>
+                <h2 class="center">NEW! Building a Business with Shopify 2020/21</h2>
                 <hr>
                 <div class="row">
                     <div class="col-6">                        
@@ -205,7 +212,7 @@
                                 thrilled with the results! The audit was very clearly (and logically) laid 
                                 out so I knew exactly what to do to rectify 
                                 issues, especially thanks to her plain English non-technical 
-                                explanations. I would highly recommend Sybil’s 
+                                explanations. I would highly recommend Sybil's 
                                 services to anyone!</p>
                             <div class="center">
                                 <img src="images/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
@@ -323,7 +330,7 @@
                             <img src="images/FSB-Member-Logo-White.png"
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
+                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
                 <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
