--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -30,7 +30,7 @@
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="2 minutes">
+        <meta name="twitter:data2" content="15 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybilmayard.tech/privacy-policy" />
         <link rel="stylesheet" href="styles.css" type="text/css">
@@ -102,13 +102,13 @@
         <div class="main section">
             <div class="container-1000">
                 <p>
-                    This is the privacy notice of Sybil Mayard trading as Sybiltech. In this document, “we”, “our”, or “us” refer to Sybil Mayard trading as Sybiltech.<br>
+                    This is the privacy notice of Sybil Mayard trading as Sybiltech. In this document, "we", "our", or "us" refer to Sybil Mayard trading as Sybiltech.<br>
                     I am a sole trader registered in the United Kingdom.<br>
                     Our registered office is at TBC.<br>
                 </p>
 
                 <h2>Introduction</h2>
-                <p>This privacy notice aims to inform you about how we collect and process any information that we collect from you, or that you provide to us. It covers information that could identify you (“personal information”) and information that could not. In the context of the law and this notice, “process” means collect, store, transfer, use or otherwise act on information. It tells you about your privacy rights and how the law protects you.</p>
+                <p>This privacy notice aims to inform you about how we collect and process any information that we collect from you, or that you provide to us. It covers information that could identify you ("personal information") and information that could not. In the context of the law and this notice, "process" means collect, store, transfer, use or otherwise act on information. It tells you about your privacy rights and how the law protects you.</p>
 
                 <p>
                     We are committed to protecting your privacy and the confidentiality of your personal information. Our policy is not just an exercise in complying with the law, but a continuation of our respect for you and your personal information.
@@ -227,7 +227,7 @@
                 <ul>
                     <li>posting a message our forum</li>
                     <li>tagging an image</li>
-                    <li>clicking on an icon next to another visitor’s message to convey your agreement, disagreement or thanks</li>
+                    <li>clicking on an icon next to another visitor's message to convey your agreement, disagreement or thanks</li>
                     <li>In posting personal information, it is up to you to satisfy yourself about the privacy level of every person who might use it.</li>
                 </ul>
 
@@ -293,7 +293,7 @@
                 <p>Use of information we collect through automated systems when you visit our website</p>
 
                 <h3>15. Cookies</h3>
-                <p>Cookies are small text files that are placed on your computer’s hard drive by your web browser when you visit any website. They allow information gathered on one web page to be stored until it is needed for use on another, allowing a website to provide you with a personalised experience and the website owner with statistics about how you use the website so that it can be improved.</p>
+                <p>Cookies are small text files that are placed on your computer's hard drive by your web browser when you visit any website. They allow information gathered on one web page to be stored until it is needed for use on another, allowing a website to provide you with a personalised experience and the website owner with statistics about how you use the website so that it can be improved.</p>
 
                 <p> Some cookies may last for a defined period of time, such as one day or until you close your browser. Others last indefinitely.</p>
 
@@ -386,14 +386,14 @@
                 <h3>25. Encryption of data sent between us</h3>
                 <p>We use Secure Sockets Layer (SSL) certificates to verify our identity to your browser and to encrypt any data you give us.</p>
 
-                <p>Whenever information is transferred between us, you can check that it is done so using SSL by looking for a closed padlock symbol or other trust mark in your browser’s URL bar or toolbar.</p>
+                <p>Whenever information is transferred between us, you can check that it is done so using SSL by looking for a closed padlock symbol or other trust mark in your browser's URL bar or toolbar.</p>
 
                 <h3>26. How you can complain</h3>
                 <p>If you are not happy with our privacy policy or if you have any complaint then you should tell us.</p>
 
                 <p>If a dispute is not settled then we hope you will agree to attempt to resolve it by engaging in good faith with us in a process of mediation or arbitration.</p>
 
-                <p>If you are in any way dissatisfied about how we process your personal information, you have a right to lodge a complaint with the Information Commissioner’s Office (ICO). This can be done at <a href="https://ico.org.uk/make-a-complaint/" target="_blank" rel="noopener noreferrer">https://ico.org.uk/make-a-complaint/</a>. We would, however, appreciate the opportunity to talk to you about your concern before you approach the ICO.</p>
+                <p>If you are in any way dissatisfied about how we process your personal information, you have a right to lodge a complaint with the Information Commissioner's Office (ICO). This can be done at <a href="https://ico.org.uk/make-a-complaint/" target="_blank" rel="noopener noreferrer">https://ico.org.uk/make-a-complaint/</a>. We would, however, appreciate the opportunity to talk to you about your concern before you approach the ICO.</p>
 
                 <h3>27. Retention period for personal data</h3>
                 <p>Except as otherwise mentioned in this privacy notice, we keep your personal information only for as long as required by us:</p>
@@ -462,7 +462,7 @@
                             <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
+                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
                 <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
