--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -30,7 +30,7 @@
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="2 minutes">
+        <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybilmayard.tech/terms-and-conditions" />
         <link rel="stylesheet" href="styles.css" type="text/css">
@@ -102,7 +102,7 @@
         <div class="main section">
             <div class="container-1000">
                 <h2>Terms and Conditions</h2>
-                <p>These terms and conditions are the contract between you and Sybil Mayard trading as Sybiltech (“us”, “we”, etc). By visiting or using Our Website, you agree to be bound by them.</p>
+                <p>These terms and conditions are the contract between you and Sybil Mayard trading as Sybiltech ("us", "we", etc). By visiting or using Our Website, you agree to be bound by them.</p>
 
                 <p>They are based on a set written by Net Lawman and released under licence. They protect your rights as well as ours.</p>
 
@@ -115,12 +115,12 @@
                 <p>These are the agreed terms:</p>
 
                 <h3>1. Definitions</h3>
-                <p>“Content” means the textual, visual or aural content that is encountered as part of your experience on Our Website. It may include, among other things: text, images, sounds, videos and animations.</p>
+                <p>"Content" means the textual, visual or aural content that is encountered as part of your experience on Our Website. It may include, among other things: text, images, sounds, videos and animations.</p>
 
-                <p>“Intellectual Property” means intellectual property owned by us, of every sort, whether or not registered or registrable in any country, including intellectual property of all kinds coming into existence after today; and including, among others, patents, trade marks, unregistered marks, designs, copyrights, software, domain names, discoveries, creations and inventions, together with all rights which are derived from those rights.</p>
+                <p>"Intellectual Property" means intellectual property owned by us, of every sort, whether or not registered or registrable in any country, including intellectual property of all kinds coming into existence after today; and including, among others, patents, trade marks, unregistered marks, designs, copyrights, software, domain names, discoveries, creations and inventions, together with all rights which are derived from those rights.</p>
 
-                <p>“Our Website” means any website or service designed for electronic access by mobile or fixed devices which is owned or operated by us.<br>
-                “Services” means the service provided from Our Website.</p>
+                <p>"Our Website" means any website or service designed for electronic access by mobile or fixed devices which is owned or operated by us.<br>
+                "Services" means the service provided from Our Website.</p>
 
                 <h3>2. Children on Our Website</h3>
                 <p>
@@ -154,7 +154,7 @@
                     4.2. All implied conditions, warranties and terms are excluded from this agreement. If in any jurisdiction an implied condition, warrant or term cannot be excluded, then this sub paragraph shall be deemed to be reduced in effect, only to the extent necessary to release that specific condition, warranty or term.<br>
                     4.3. You are advised that Content may include technical inaccuracies or typographical errors. This is inevitable in any large website. We would be grateful if you bring to our immediate attention, any that you find.<br>
                     4.4. Our Website contains links to other internet websites. We have neither power nor control over any such website. You acknowledge and agree that we shall not be liable in any way for the Content of any such linked website, nor for any loss or damage arising from your use of any such website or from your buying services or goods via such a website.<br>
-                    4.5. The Sybil Mayard trading as Sybiltech Website and Sybil Mayard trading as Sybiltech Services are provided “as is”. We make no representation or warranty that Our Website will be:<br>
+                    4.5. The Sybil Mayard trading as Sybiltech Website and Sybil Mayard trading as Sybiltech Services are provided "as is". We make no representation or warranty that Our Website will be:<br>
                     4.5.1 useful to you;<br>
                     4.5.2 of satisfactory quality;<br>
                     4.5.3 fit for a particular purpose;<br>
@@ -228,7 +228,7 @@
                             <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
+                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
                 <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
