--- a/vidcareer.html
+++ b/vidcareer.html
@@ -100,18 +100,18 @@
         <div class="main section">
             <div class="container-1000">
                 <h2>The VidCareer Story</h2>
-                <p>VidCareer has been my biggest achievement so far. It’s a start-up idea that began during my time at the <a href="https://www.kent.ac.uk/" target="_blank" rel="noopener noreferrer">University of Kent</a>. VidCareer is a recruitment platform and social enterprise that helps small businesses connect with candidates via online career events – like careers fairs, but delivered virtually. There are clear benefits for both parties: less time and money spent on networking events, and it’s kinder to the environment too.</p>
+                <p>VidCareer has been my biggest achievement so far. It's a start-up idea that began during my time at the <a href="https://www.kent.ac.uk/" target="_blank" rel="noopener noreferrer">University of Kent</a>. VidCareer is a recruitment platform and social enterprise that helps small businesses connect with candidates via online career events – like careers fairs, but delivered virtually. There are clear benefits for both parties: less time and money spent on networking events, and it's kinder to the environment too.</p>
 
                 <p>For the last several months, I have been developing a fully-functional prototype platform that has helped keep my coding skills up-to-date. Please visit the <a href="https://www.vidcareer.com/" target="_blank" rel="noopener noreferrer">VidCareer</a> demo site to learn more about how it works.</p>
 
-                <p>I’ve designed and created the entire site from scratch, making use of a range of technologies, languages and APIs. PHP, HTML, CSS, SQL, JavaScript, Bootstrap and the <a href="https://developer.goto.com/GoToMeetingV1/" target="_blank" rel="noopener noreferrer">GoToMeeting REST API</a> are some of the features implemented. The platform is deployed on a cloud hosting service, <a href="https://www.heroku.com/" target="_blank" rel="noopener noreferrer">Heroku</a>.</p>
+                <p>I've designed and created the entire site from scratch, making use of a range of technologies, languages and APIs. PHP, HTML, CSS, SQL, JavaScript, Bootstrap and the <a href="https://developer.goto.com/GoToMeetingV1/" target="_blank" rel="noopener noreferrer">GoToMeeting REST API</a> are some of the features implemented. The platform is deployed on a cloud hosting service, <a href="https://www.heroku.com/" target="_blank" rel="noopener noreferrer">Heroku</a>.</p>
 
                 <h3>Competition Winner</h3>
-                <p>In April 2018, I was delighted to find out that I had been chosen as the winner of the Big Ideas Competition at Kent with my business idea, “Codable”, which is an online platform which helps tech companies hire the right developers. The winning prize was an all-expenses-paid trip to Virginia in the USA to pitch the idea at the finals.</p>
+                <p>In April 2018, I was delighted to find out that I had been chosen as the winner of the Big Ideas Competition at Kent with my business idea, "Codable", which is an online platform which helps tech companies hire the right developers. The winning prize was an all-expenses-paid trip to Virginia in the USA to pitch the idea at the finals.</p>
 
                 <p>So after several months of preparation, a fellow student, Olcay Kilincci, and I, had flown out to <a href="https://vt.edu/" target="_blank" rel="noopener noreferrer">Virginia Tech</a> to compete against 12 other teams from around the world at the VT Global Entrepreneur Challenge. Even though we did not win the grand prize, it was a once-in-a-lifetime experience; the entrepreneurial skills gained and connections made will no doubt be valuable in our future careers.</p>
 
-                <p>After several more months of further development, I revised and rebranded the idea as “VidCareer“.</p>
+                <p>After several more months of further development, I revised and rebranded the idea as "VidCareer".</p>
 
                 <p>You can read more about my success at the following links:</p>
 
@@ -179,7 +179,7 @@
                             <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
+                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
                 <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
