--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -28,7 +28,7 @@
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="2 minutes">
+        <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybilmayard.tech/6-tips-for-surviving-remote-working" />
         <link rel="stylesheet" href="styles.css" type="text/css">
@@ -99,23 +99,23 @@
         </div>
         <div class="main section">
             <div class="container-1000">
-                <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it’s essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively.</p>
+                <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively.</p>
 
                 <h2>Optimise Your Technology</h2>
-                <p>Get a reliable internet connection. If possible, use an Ethernet connection rather than wi-fi, as it’s faster, more reliable and the connection is less prone to dropping out.</p>
+                <p>Get a reliable internet connection. If possible, use an Ethernet connection rather than wi-fi, as it's faster, more reliable and the connection is less prone to dropping out.</p>
 
-                <p>Invest in a reliable headset with microphone. You may also need to buy a webcam if your laptop doesn’t include a built-in one.</p>
+                <p>Invest in a reliable headset with microphone. You may also need to buy a webcam if your laptop doesn't include a built-in one.</p>
 
-                <p>Make sure that your laptop or computer is in good working order and install the latest updates to protect it from vulnerabilities and, er, viruses. It’s a good idea to keep a spare device handy in case your usual one fails. Staring into a laptop screen for long periods of time can become uncomfortable, so it is advisable connecting it to a second monitor to ease eyestrain. Choose a good quality monitor with a large 24″ display.</p>
+                <p>Make sure that your laptop or computer is in good working order and install the latest updates to protect it from vulnerabilities and, er, viruses. It's a good idea to keep a spare device handy in case your usual one fails. Staring into a laptop screen for long periods of time can become uncomfortable, so it is advisable connecting it to a second monitor to ease eyestrain. Choose a good quality monitor with a large 24" display.</p>
 
                 <p>Remember to backup your work regularly! I recommend storing important files on an external hard drive. Choose one with ample storage space (at least 2TB). You can also use online tools such as Google Drive and Dropbox. The free versions offer a generous amount of storage, or you can purchase additional space for a small cost.</p>
 
                 <h2>Maintain Good Communication</h2>
 
                 <p>Forward calls from the office landline phone to your mobile, to prevent missing important calls.</p>
-                <p>It’s more important than ever to keep your team well-informed. Use email, instant messaging and video calling to replace face-to-face communication. Maintaining regular contact also helps to reduce feelings of isolation.</p>
+                <p>It's more important than ever to keep your team well-informed. Use email, instant messaging and video calling to replace face-to-face communication. Maintaining regular contact also helps to reduce feelings of isolation.</p>
 
-                <p>You could organise a “stand-up” at 9:30am each morning. This is a quick meeting, usually around 15 minutes long, with the purpose of discussing each team member’s tasks for the day. Try using this template:</p>
+                <p>You could organise a "stand-up" at 9:30am each morning. This is a quick meeting, usually around 15 minutes long, with the purpose of discussing each team member's tasks for the day. Try using this template:</p>
                 <ul>
                     <li>What was done yesterday</li>
                     <li>What needs to be done today</li>
@@ -125,26 +125,28 @@
                 <p>At 4:30pm you could have a second (optional) stand-up to review what was achieved throughout the day.</p>
 
                 <h2>Make the Most of Software</h2>
-                <p>Trello is great for keeping track of projects. It’s available either as an online or desktop app. Create a board for your project, and organise tasks into lists (e.g. To Do, Doing, Done). You can use the tool for personal projects or for collaborating with others.</p>
+                <p><a href="https://trello.com" target="_blank" rel="noopener noreferrer">Trello</a> is great for keeping track of projects. It's available either as an online or desktop app. Create a board for your project, and organise tasks into lists (e.g. To Do, Doing, Done). You can use the tool for personal projects or for collaborating with others.</p>
 
-                <p>Need to share large files? No more sending attachments via email! Create a document in Google Drive and send the shareable link to whoever requires access.</p>
+                <p>Need to share large files? No more sending attachments via email! Create a document in <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer">Google Drive</a> and send the shareable link to colleagues who require access.</p>
 
-                <p>There are many options available for video meetings. One of the most popular is Zoom: this offers free video calling for 40 minutes for up to 100 participants, or unlimited time for 1 to 1 meetings. Other well-known alternatives are Skype, Google Hangouts and GoToMeeting. These tools are also great for keeping in touch with friends and family. Just remember to change out of your pyjamas before making that video call.</p>
+                <p>There are many options available for video meetings. One of the most popular is <a href="https://zoom.us/" target="_blank" rel="noopener noreferrer">Zoom</a>: this offers free video calling for 40 minutes for up to 100 participants, or unlimited time for 1 to 1 meetings. Other well-known alternatives include <a href="https://www.microsoft.com/en-gb/microsoft-365/microsoft-teams/free" target="_blank" rel="noopener noreferrer">Microsoft Teams</a> and <a href="https://meet.google.com/" target="_blank" rel="noopener noreferrer">Google Meet</a>. These tools are also great for keeping in touch with friends and family. Just remember to change out of your pyjamas before making that video call.</p>
 
-                <p>Another great piece of software is Slack. It’s also available both as an online and desktop tool. Slack is an alternative to email; it features instant messaging, file sharing, video calling and integration with other apps (Google Drive, Office 365 and more).</p>
+                <p>Another great piece of software is <a href="https://slack.com/" target="_blank" rel="noopener noreferrer">Slack</a>. It's an alternative to email, featuring instant messaging, file sharing, video calling and integration with other apps (Google Drive, <a href="https://www.office.com/" target="_blank" rel="noopener noreferrer">Office 365</a> and more). Slack is available both as an online and desktop tool.</p>
 
                 <h2>Keep to a Defined Routine</h2>
-                <p>When working from home, it’s easy for working time to impinge on personal time. Create a routine and stick to it – whether that is 9am-5pm or 9pm-5am – whichever works best for you. Keep to these hours and don’t be tempted to send just “one more” email before leaving work – it’s easy to lose track of time. Remember to take care of your health, by scheduling in regular breaks in between sessions. I recommend 1 hour for lunch and one 15-minute break either side of the lunch hour.</p>
+                <p>When working from home, it's easy for working time to impinge on personal time. Create a routine and stick to it – whether that is 9am-5pm or 9pm-5am – whichever works best for you. Keep to these hours and don't be tempted to send just "one more" email before leaving work – it's easy to lose track of time. Remember to take care of your health, by scheduling in regular breaks in between sessions. I recommend 1 hour for lunch and one 15-minute break either side of the lunch hour.</p>
 
-                <h2>Have a Location Dedicated for Working</h2>
+                <h2>Have a Location Dedicated to Working</h2>
                 <p>Create an area in your home that you will use for working (not your bedroom). If you are going to be spending long hours using a computer, invest in a comfortable chair to prevent back pain and maintain good posture. Ensure that you are not going to be subject to frequent distractions from family members or the TV. If you have children, minimise interruptions by keeping them occupied elsewhere in the house during working hours. Treat your home office as you would your regular office. But please remember to stay healthy – do not indulge in snacking just because you are now in close proximity of the fridge.</p>
 
                 <h2>Enjoy the Benefits of Remote Working</h2>
-                <p>You may not be used to working from home, but you will soon begin to see the benefits. Be grateful that you don’t have to face the dreaded daily commute. Make use of the extra time to spend with family, start a new hobby, keep fit or just enjoy an extra 1-2 hours of sleep.</p>
+                <p>You may not be used to working from home, but you will soon begin to see the benefits. Be grateful that you don't have to face the dreaded daily commute. Make use of the extra time to spend with family, start a new hobby, keep fit or just enjoy an extra 1-2 hours of sleep.</p>
 
-                <p>Working from home does allow you a certain degree of freedom. One of the perks I enjoy is the ability to listen to music whilst working. If you do this, choose something that is going to encourage productivity rather than cause distraction (my personal choices are chillhop, jazz or classical music).</p>
+                <p>Working from home does allow you a certain degree of freedom. One of the perks I enjoy is the ability to listen to music whilst working. If you do this, choose something that is going to encourage productivity rather than cause distraction.</p>
 
                 <p>Once you have defined your routine and found what works for you, I am sure that you will find working from home to be a much more productive and efficient system – make the most of it!</p>
+
+                <p>Please also check out my blog post on <a href="5-best-tools-for-remote-working.html">5 Best Tools For Remote Working</a>.</p>
             </div>
         </div>
         <div class="contact section">
@@ -194,7 +196,7 @@
                             <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
+                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
                 <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
