--- a/an-android-app-for-an-educational-poker-platform.html
+++ b/an-android-app-for-an-educational-poker-platform.html
@@ -103,8 +103,8 @@
                 <p>VFor my final MSc project at the <a href="https://www.kent.ac.uk" 
                     target="_blank" rel="noopener noreferrer">University of Kent</a>, 
                     I created an Android 
-                    app that teaches you how to play Texas Hold’em Poker. The app works by 
-                    using an algorithm that calculates the player’s hand score, or probability 
+                    app that teaches you how to play Texas Hold'em Poker. The app works by 
+                    using an algorithm that calculates the player's hand score, or probability 
                     of winning (depending on which round is currently in progress), and 
                     recommends the best action for the player to take.</p>
 
@@ -168,7 +168,7 @@
                             <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
+                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
                 <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
