--- a/blog.html
+++ b/blog.html
@@ -121,11 +121,11 @@
                 <p>With an overwhelming amount of tools available today, it can be a difficult 
                     task finding the best ones, especially if you are unfamiliar with working 
                     from home. Here I present to you a summary of my 5 favourite tools for remote 
-                    working, all of which are available for free. Of course, I can’t go into …</p>
+                    working, all of which are available for free. Of course, I can't go into …</p>
                 <a href="5-best-tools-for-remote-working.html">Read More >></a>
                 <h2>6 Tips for Surviving Remote Working</h2>
                 <p>Love it or loathe it, working remotely may not be for everyone but due to 
-                    the current pandemic it’s essential that work is carried out from home 
+                    the current pandemic it's essential that work is carried out from home 
                     where possible. Read on to find out how you can WFH (work from home) more 
                     effectively. Optimise Your Technology Get a reliable internet connection. 
                     If possible, use an …</p>
@@ -179,7 +179,7 @@
                             <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
+                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
                 <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
