--- a/webtip-wednesday-series-launched-on-twitter.html
+++ b/webtip-wednesday-series-launched-on-twitter.html
@@ -99,7 +99,7 @@
         </div>
         <div class="main section">
             <div class="container-1000">
-                <p>I am pleased to announce that my new series “WebTip Wednesday” has just begun 
+                <p>I am pleased to announce that my new series "WebTip Wednesday" has just begun 
                     on Twitter. Every Wednesday morning at 9:30am, I will tweet a useful tip that 
                     will help you with different aspects of website development. Areas include 
                     search engine optimisation (SEO), design and coding with HTML/CSS.</p>
@@ -156,7 +156,7 @@
                             <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
+                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
                 <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
