--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -1,3 +1,6 @@
+---
+permalink: /6-reasons-to-use-shopify/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -19,7 +22,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Shopify: 6 Reasons Why You Should be Using It | Sybiltech" />
         <meta property="og:description" content="Shopify is one of the most popular e-commerce platforms on the market. Read this blog to find out why you should be using Shopify." />
-        <meta property="og:url" content="https://sybilmayard.tech/6-reasons-to-use-shopify" />
+        <meta property="og:url" content="https://sybilmayard.tech/6-reasons-to-use-shopify/" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -30,7 +33,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/6-reasons-to-use-shopify" />
+        <link rel="canonical" href="https://sybilmayard.tech/6-reasons-to-use-shopify/" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
@@ -41,7 +44,7 @@
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://stm-2018.github.io/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -49,17 +52,17 @@
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="events.html">Events</a>
-                    <a href="building-business-shopify.html">Shopify Course</a>                   
+                    <a href="https://stm-2018.github.io/events">Events</a>
+                    <a href="https://stm-2018.github.io/building-business-shopify">Shopify Course</a>                   
                     <div class="dropdown">
                         <button class="dropbtn">About
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="about.html">About</a>
-                            <a href="clients.html">Clients</a>
-                            <a href="services.html">Services</a>
-                            <a href="faqs.html">FAQs</a>
+                            <a href="https://stm-2018.github.io/about">About</a>
+                            <a href="https://stm-2018.github.io/clients">Clients</a>
+                            <a href="https://stm-2018.github.io/services">Services</a>
+                            <a href="https://stm-2018.github.io/faqs">FAQs</a>
                         </div>
                     </div>                    
                     <div class="dropdown">
@@ -67,10 +70,10 @@
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="vidcareer.html">VidCareer</a>
-                            <a href="an-android-app-for-an-educational-poker-platform.html">An Android App for an Educational Poker Platform</a>
-                            <a href="tagnav.html">TagNav</a>
-                            <a href="my-personal-portfolio.html">My Personal Portfolio</a>
+                            <a href="https://stm-2018.github.io/vidcareer">VidCareer</a>
+                            <a href="https://stm-2018.github.io/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
+                            <a href="https://stm-2018.github.io/tagnav">TagNav</a>
+                            <a href="https://stm-2018.github.io/my-personal-portfolio">My Personal Portfolio</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -78,13 +81,13 @@
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="6-reasons-to-use-shopify.html">6 Reasons Why You Should Be Using Shopify</a>
-                            <a href="webtip-wednesday-series-launched-on-twitter.html">WebTip Wednesday Series Launched on Twitter</a>
-                            <a href="5-best-tools-for-remote-working.html">5 Best Tools For Remote Working</a>
-                            <a href="6-tips-for-surviving-remote-working.html">6 Tips For Surviving Remote Working</a>
+                            <a href="https://stm-2018.github.io/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
+                            <a href="https://stm-2018.github.io/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
+                            <a href="https://stm-2018.github.io/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
+                            <a href="https://stm-2018.github.io/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
                         </div>
                     </div>
-                    <a href="contact.html">Contact</a>
+                    <a href="https://stm-2018.github.io/contact">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -189,13 +192,13 @@
                     the best language and currency for the customer, based on their location. At 
                     the time of publishing this blog, 133 currencies are supported.</p>
 
-                <p><em>Check out the new video course, <a href="building-business-shopify.html">
+                <p><em>Check out the new video course, <a href="https://stm-2018.github.io/building-business-shopify">
                     Building a Business with Shopify 2020/21</a>, 
                     produced in partnership with <a href="https://cntassociates.com" target="_blank" 
                     rel="noopener noreferrer">CNT Associates</a>.</em></p>
 
                 <div class="padding-bottom padding-top center">
-                    <a class="btn-primary" href="building-business-shopify.html">View Course</a>
+                    <a class="btn-primary" href="https://stm-2018.github.io/building-business-shopify">View Course</a>
                 </div>
                 <p>* Access to the checkout theme file is only available with Shopify Plus.</p>
             </div>
@@ -204,7 +207,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://stm-2018.github.io/contact">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -217,11 +220,11 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="about.html">About</a></p>
-                        <p><a href="services.html">Services</a></p>
-                        <p><a href="contact.html">Contact</a></p>
-                        <p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
-                        <p><a href="privacy-policy.html">Privacy Policy</a></p>
+                        <p><a href="https://stm-2018.github.io/about">About</a></p>
+                        <p><a href="https://stm-2018.github.io/services">Services</a></p>
+                        <p><a href="https://stm-2018.github.io/contact">Contact</a></p>
+                        <p><a href="https://stm-2018.github.io/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://stm-2018.github.io/privacy-policy">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
@@ -244,13 +247,13 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-Member-Logo-White.png" 
+                            <img src="https://stm-2018.github.io/images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
+                            <img src="https://stm-2018.github.io/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://stm-2018.github.io/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
