--- a/clients.html
+++ b/clients.html
@@ -1,3 +1,6 @@
+---
+permalink: /clients/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -19,7 +22,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Clients | Web Development & E-Commerce Services | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here." />
-        <meta property="og:url" content="https://sybilmayard.tech/clients" />
+        <meta property="og:url" content="https://sybilmayard.tech/clients/" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -30,7 +33,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/clients" />
+        <link rel="canonical" href="https://sybilmayard.tech/clients/" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
@@ -41,7 +44,7 @@
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://stm-2018.github.io/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -49,17 +52,17 @@
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="events.html">Events</a>
-                    <a href="building-business-shopify.html">Shopify Course</a>                   
+                    <a href="https://stm-2018.github.io/events">Events</a>
+                    <a href="https://stm-2018.github.io/building-business-shopify">Shopify Course</a>                   
                     <div class="dropdown">
                         <button class="dropbtn">About
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="about.html">About</a>
-                            <a href="clients.html">Clients</a>
-                            <a href="services.html">Services</a>
-                            <a href="faqs.html">FAQs</a>
+                            <a href="https://stm-2018.github.io/about">About</a>
+                            <a href="https://stm-2018.github.io/clients">Clients</a>
+                            <a href="https://stm-2018.github.io/services">Services</a>
+                            <a href="https://stm-2018.github.io/faqs">FAQs</a>
                         </div>
                     </div>                    
                     <div class="dropdown">
@@ -67,10 +70,10 @@
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="vidcareer.html">VidCareer</a>
-                            <a href="an-android-app-for-an-educational-poker-platform.html">An Android App for an Educational Poker Platform</a>
-                            <a href="tagnav.html">TagNav</a>
-                            <a href="my-personal-portfolio.html">My Personal Portfolio</a>
+                            <a href="https://stm-2018.github.io/vidcareer">VidCareer</a>
+                            <a href="https://stm-2018.github.io/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
+                            <a href="https://stm-2018.github.io/tagnav">TagNav</a>
+                            <a href="https://stm-2018.github.io/my-personal-portfolio">My Personal Portfolio</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -78,13 +81,13 @@
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="6-reasons-to-use-shopify.html">6 Reasons Why You Should Be Using Shopify</a>
-                            <a href="webtip-wednesday-series-launched-on-twitter.html">WebTip Wednesday Series Launched on Twitter</a>
-                            <a href="5-best-tools-for-remote-working.html">5 Best Tools For Remote Working</a>
-                            <a href="6-tips-for-surviving-remote-working.html">6 Tips For Surviving Remote Working</a>
+                            <a href="https://stm-2018.github.io/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
+                            <a href="https://stm-2018.github.io/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
+                            <a href="https://stm-2018.github.io/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
+                            <a href="https://stm-2018.github.io/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
                         </div>
                     </div>
-                    <a href="contact.html">Contact</a>
+                    <a href="https://stm-2018.github.io/contact">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -106,7 +109,7 @@
                 <div id="pathways-21"class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-4">
-                            <img src="images/clients/Pathways-21.png" alt="Pathways 21">
+                            <img src="https://stm-2018.github.io/images/clients/Pathways-21.png" alt="Pathways 21">
                         </div>
                         <div class="col-8">
                             <h2>Pathways 21 (WordPress)</h2>
@@ -125,7 +128,7 @@
                 <div id="cnt-associates" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/CNT-Associates.png" alt="CNT Associates">                         
+                            <img src="https://stm-2018.github.io/images/clients/CNT-Associates.png" alt="CNT Associates">                         
                         </div>
                         <div class="col-8">
                             <h2>CNT Associates</h2>
@@ -144,7 +147,7 @@
                 <div id="find-the-balance" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/find-the-balance.PNG" alt="Find the Balance">                         
+                            <img src="https://stm-2018.github.io/images/clients/find-the-balance.PNG" alt="Find the Balance">                         
                         </div>
                         <div class="col-8">
                             <h2>Find the Balance (Squarespace)</h2>
@@ -163,7 +166,7 @@
                 <div id="audrey-zeitoun-coaching" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching">                         
+                            <img src="https://stm-2018.github.io/images/clients/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching">                         
                         </div>
                         <div class="col-8">
                             <h2>Audrey Zeitoun Coaching (Wix)</h2>
@@ -183,7 +186,7 @@
                 <div id="blue-horizon-lnw" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/Blue-Horizon-LNW.png" alt="Blue Horizon LNW">                         
+                            <img src="https://stm-2018.github.io/images/clients/Blue-Horizon-LNW.png" alt="Blue Horizon LNW">                         
                         </div>
                         <div class="col-8">
                             <h2>Blue Horizon LNW (Bandzoogle)</h2>
@@ -202,7 +205,7 @@
                 <div id="tania-paige-designs" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/tania-paige-designs.PNG" alt="Tania Paige Designs">                         
+                            <img src="https://stm-2018.github.io/images/clients/tania-paige-designs.PNG" alt="Tania Paige Designs">                         
                         </div>
                         <div class="col-8">
                             <h2>Tania Paige Designs (Shopify)</h2>
@@ -221,7 +224,7 @@
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/New-Haw-Community-Centre.png" alt="New Haw Community Centre">                         
+                            <img src="https://stm-2018.github.io/images/clients/New-Haw-Community-Centre.png" alt="New Haw Community Centre">                         
                         </div>
                         <div class="col-8">
                             <h2>New Haw Community Centre (WordPress)</h2>
@@ -242,7 +245,7 @@
                 <div id="esme-learning-solutions" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/Esme-Learning-Solutions.png" alt="Esme Learning Solutions">                         
+                            <img src="https://stm-2018.github.io/images/clients/Esme-Learning-Solutions.png" alt="Esme Learning Solutions">                         
                         </div>
                         <div class="col-8">
                             <h2>Esme Learning Solutions (Shopify)</h2>
@@ -266,7 +269,7 @@
                 <div id="future-communities-uk" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/Future-Communities-UK.png" alt="Future Communities UK">                         
+                            <img src="https://stm-2018.github.io/images/clients/Future-Communities-UK.png" alt="Future Communities UK">                         
                         </div>
                         <div class="col-8">
                             <h2>Future Communities UK (WordPress)</h2>
@@ -288,7 +291,7 @@
                 <div id="wardells-wardrobe" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/wardells-wardrobe.PNG" alt="Wardell's Wardrobe">                         
+                            <img src="https://stm-2018.github.io/images/clients/wardells-wardrobe.PNG" alt="Wardell's Wardrobe">                         
                         </div>
                         <div class="col-8">
                             <h2>Wardell's Wardrobe (Shopify)</h2>
@@ -307,7 +310,7 @@
                 <div id="gdpr-compliance-consultancy" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/The-GDPR-Compliance-Consultancy.png" alt="The GDPR Compliance Consultancy">                         
+                            <img src="https://stm-2018.github.io/images/clients/The-GDPR-Compliance-Consultancy.png" alt="The GDPR Compliance Consultancy">                         
                         </div>
                         <div class="col-8">
                             <h2>The GDPR Compliance Consultancy (WordPress)</h2>
@@ -327,7 +330,7 @@
                 <div id="swipsearch" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/SwipSearch.png" alt="SwipSearch">                         
+                            <img src="https://stm-2018.github.io/images/clients/SwipSearch.png" alt="SwipSearch">                         
                         </div>
                         <div class="col-8">
                             <h2>SwipSearch (Wix)</h2>
@@ -346,7 +349,7 @@
                 <div id="kyosk" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/KYOSK.png" alt="KYOSK">                         
+                            <img src="https://stm-2018.github.io/images/clients/KYOSK.png" alt="KYOSK">                         
                         </div>
                         <div class="col-8">
                             <h2>KYOSK (Shopify)</h2>
@@ -367,7 +370,7 @@
                 <div id="focus-on-learning" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="images/clients/focus-on-learning.PNG" alt="Focus on Learning">                         
+                            <img src="https://stm-2018.github.io/images/clients/focus-on-learning.PNG" alt="Focus on Learning">                         
                         </div>
                         <div class="col-8">
                             <h2>Focus on Learning (Squarespace)</h2>
@@ -385,7 +388,7 @@
                 <p>Find out how I can help your business grow further today.</p>
 
                 <div class="padding-bottom padding-top center">
-                    <a class="btn-primary" href="contact.html">Contact Me</a>
+                    <a class="btn-primary" href="https://stm-2018.github.io/contact">Contact Me</a>
                 </div>
             </div>
         </div>
@@ -393,7 +396,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://stm-2018.github.io/contact">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -406,11 +409,11 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="about.html">About</a></p>
-                        <p><a href="services.html">Services</a></p>
-                        <p><a href="contact.html">Contact</a></p>
-                        <p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
-                        <p><a href="privacy-policy.html">Privacy Policy</a></p>
+                        <p><a href="https://stm-2018.github.io/about">About</a></p>
+                        <p><a href="https://stm-2018.github.io/services">Services</a></p>
+                        <p><a href="https://stm-2018.github.io/contact">Contact</a></p>
+                        <p><a href="https://stm-2018.github.io/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://stm-2018.github.io/privacy-policy">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
@@ -433,13 +436,13 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-Member-Logo-White.png" 
+                            <img src="https://stm-2018.github.io/images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
+                            <img src="https://stm-2018.github.io/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://stm-2018.github.io/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
