--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+permalink: /
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -43,7 +46,7 @@
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://stm-2018.github.io/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -51,17 +54,17 @@
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="events.html">Events</a>
-                    <a href="building-business-shopify.html">Shopify Course</a>                   
+                    <a href="https://stm-2018.github.io/events">Events</a>
+                    <a href="https://stm-2018.github.io/building-business-shopify">Shopify Course</a>                   
                     <div class="dropdown">
                         <button class="dropbtn">About
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="about.html">About</a>
-                            <a href="clients.html">Clients</a>
-                            <a href="services.html">Services</a>
-                            <a href="faqs.html">FAQs</a>
+                            <a href="https://stm-2018.github.io/about">About</a>
+                            <a href="https://stm-2018.github.io/clients">Clients</a>
+                            <a href="https://stm-2018.github.io/services">Services</a>
+                            <a href="https://stm-2018.github.io/faqs">FAQs</a>
                         </div>
                     </div>                    
                     <div class="dropdown">
@@ -69,10 +72,10 @@
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="vidcareer.html">VidCareer</a>
-                            <a href="an-android-app-for-an-educational-poker-platform.html">An Android App for an Educational Poker Platform</a>
-                            <a href="tagnav.html">TagNav</a>
-                            <a href="my-personal-portfolio.html">My Personal Portfolio</a>
+                            <a href="https://stm-2018.github.io/vidcareer">VidCareer</a>
+                            <a href="https://stm-2018.github.io/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
+                            <a href="https://stm-2018.github.io/tagnav">TagNav</a>
+                            <a href="https://stm-2018.github.io/my-personal-portfolio">My Personal Portfolio</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -80,13 +83,13 @@
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="6-reasons-to-use-shopify.html">6 Reasons Why You Should Be Using Shopify</a>
-                            <a href="webtip-wednesday-series-launched-on-twitter.html">WebTip Wednesday Series Launched on Twitter</a>
-                            <a href="5-best-tools-for-remote-working.html">5 Best Tools For Remote Working</a>
-                            <a href="6-tips-for-surviving-remote-working.html">6 Tips For Surviving Remote Working</a>
+                            <a href="https://stm-2018.github.io/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
+                            <a href="https://stm-2018.github.io/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
+                            <a href="https://stm-2018.github.io/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
+                            <a href="https://stm-2018.github.io/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
                         </div>
                     </div>
-                    <a href="contact.html">Contact</a>
+                    <a href="https://stm-2018.github.io/contact">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -98,7 +101,7 @@
                 <h4>Taking your online business further...</h4>
                 <h1>Sybiltech</h1>
                 <p class="padding-bottom">A freelance IT consultant who can help you achieve your goals.</p>
-                <a class="btn-primary" href="services.html">My Services</a>
+                <a class="btn-primary" href="https://stm-2018.github.io/services">My Services</a>
             </div>
         </div>
         <div class="services section">
@@ -129,7 +132,7 @@
                     </div>
                 </div>
                 <div class="center padding-bottom">
-                    <a class="btn-primary" href="services.html">View Services</a>   
+                    <a class="btn-primary" href="https://stm-2018.github.io/services">View Services</a>   
                 </div>
             </div>
         </div>
@@ -140,30 +143,30 @@
                 worked with:</p>
             <div class="row">
                 <div class="col-3">                        
-                    <a href="clients.html#audrey-zeitoun-coaching">
-                        <img src="images/clients/Audrey-Zeitoun-Coaching.png" 
+                    <a href="https://stm-2018.github.io/clients#audrey-zeitoun-coaching">
+                        <img src="https://stm-2018.github.io/images/clients/Audrey-Zeitoun-Coaching.png" 
                         alt="Audrey Zeitoun Coaching"></a>
                     <h4>Audrey Zeitoun Coaching</h4>
                 </div>
                 <div class="col-3">                    
-                <a href="clients.html#find-the-balance"><img src="images/clients/find-the-balance.PNG" 
+                <a href="https://stm-2018.github.io/clients#find-the-balance"><img src="https://stm-2018.github.io/images/clients/find-the-balance.PNG" 
                     alt="Find the Balance"></a>
                 <h4>Find the Balance</h4>
                 </div>
                 <div class="col-3">                       
-                    <a href="clients.html#pathways-21"><img src="images/clients/Pathways-21.png" 
+                    <a href="https://stm-2018.github.io/clients#pathways-21"><img src="https://stm-2018.github.io/images/clients/Pathways-21.png" 
                         alt="Pathways 21"></a>
                     <h4>Pathways 21</h4>
                 </div>
                 <div class="col-3">                    
-                    <a href="clients.html#gdpr-compliance-consultancy">
-                        <img src="images/clients/The-GDPR-Compliance-Consultancy.png" 
+                    <a href="https://stm-2018.github.io/clients#gdpr-compliance-consultancy">
+                        <img src="https://stm-2018.github.io/images/clients/The-GDPR-Compliance-Consultancy.png" 
                         alt="The GDPR Compliance Consultancy"></a>
                 <h4>The GDPR Compliance Consultancy</h4>
                 </div>
             </div>
             <div class="center padding-bottom">
-                <a class="btn-primary" href="clients.html">View All Clients</a>   
+                <a class="btn-primary" href="https://stm-2018.github.io/clients">View All Clients</a>   
             </div>
         </div>
         <div class="events section">
@@ -172,12 +175,12 @@
                 <hr>
                 <div class="row">
                     <div class="col-6">                        
-                        <img src="images/shopify_logo_black-300x86.png" alt="Shopify logo">                 
+                        <img src="https://stm-2018.github.io/images/shopify_logo_black-300x86.png" alt="Shopify logo">                 
                     </div>
                     <div class="col-6">                       
                         <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
                                 teaching you how to start your e-commerce business using Shopify.</p>
-                        <a class="btn-cnt" href="events.html">View Events</a>          
+                        <a class="btn-cnt" href="https://stm-2018.github.io/events">View Events</a>          
                     </div>
                 </div>
             </div>
@@ -197,7 +200,7 @@
                                 hard worker.<br>I would recommend her to anyone looking for a partner 
                                 to nail your website!</p>
                             <div class="center">
-                                <img src="images/KYOSK-Logo.png" alt="KYOSK logo">
+                                <img src="https://stm-2018.github.io/images/KYOSK-Logo.png" alt="KYOSK logo">
                             </div>
                             <h4>Shaheen Javid</h4>
                             <p class="center">CEO,<br>
@@ -215,7 +218,7 @@
                                 explanations. I would highly recommend Sybil's 
                                 services to anyone!</p>
                             <div class="center">
-                                <img src="images/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
+                                <img src="https://stm-2018.github.io/images/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
                             </div>
                             <h4>Freddie Ryder</h4>
                             <p class="center">CEO,<br>
@@ -232,7 +235,7 @@
                                 Her work is of a high quality and she is able to work both as part 
                                 of a team and on her own initiative.</p>
                             <div class="center">
-                                <img src="images/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
+                                <img src="https://stm-2018.github.io/images/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
                             </div>
                             <h4>Gary Parker</h4>
                             <p class="center">Director,<br>
@@ -248,7 +251,7 @@
                                 Sybil to anyone wanting a high quality, personalised and reasonably 
                                 priced service. Her work is top class!</p>
                             <div class="center">
-                                <img src="images/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
+                                <img src="https://stm-2018.github.io/images/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
                             </div>
                             <h4>Audrey Zeitoun</h4>
                             <p class="center">Life Transitions Coach,<br>
@@ -265,19 +268,19 @@
                 <div class="row">
                     <div class="col-4">
                         <h4>Google Digital Garage Certified</h4>
-                        <img src="images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
+                        <img src="https://stm-2018.github.io/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
                             alt="Sybil Mayard Google Digital Garage The Fundamentals of Digital Marketing certificate">
                     </div>
                     <div class="col-4">
                     <h4>Yoast Academy Certified</h4>
                     <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
                         target="_blank" rel="noopener noreferrer">
-                        <img src="images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
+                        <img src="https://stm-2018.github.io/images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
                             alt="Sybil Mayard Yoast for Beginners certificate"></a>
                     </div>
                     <div class="col-4">
                         <h4>Google Analytics Academy Certified</h4>
-                        <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png"
+                        <img src="https://stm-2018.github.io/images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png"
                             alt="Sybil Mayard Google Analytics for Beginners certificate">
                     </div>
                 </div>
@@ -287,7 +290,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://stm-2018.github.io/contact">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -300,11 +303,11 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="about.html">About</a></p>
-                        <p><a href="services.html">Services</a></p>
-                        <p><a href="contact.html">Contact</a></p>
-                        <p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
-                        <p><a href="privacy-policy.html">Privacy Policy</a></p>
+                        <p><a href="https://stm-2018.github.io/about">About</a></p>
+                        <p><a href="https://stm-2018.github.io/services">Services</a></p>
+                        <p><a href="https://stm-2018.github.io/contact">Contact</a></p>
+                        <p><a href="https://stm-2018.github.io/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://stm-2018.github.io/privacy-policy">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
@@ -327,13 +330,13 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-Member-Logo-White.png"
+                            <img src="https://stm-2018.github.io/images/FSB-Member-Logo-White.png"
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
+                            <img src="https://stm-2018.github.io/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://stm-2018.github.io/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
