--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,3 +1,6 @@
+---
+permalink: /terms-and-conditions/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -21,7 +24,7 @@
         <meta property="og:title" content="Terms & Conditions | Web Development E-Commerce | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
             for SMEs in Shopify, Squarespace, WordPress and Wix. Read my terms and conditions here." />
-        <meta property="og:url" content="https://sybilmayard.tech/terms-and-conditions" />
+        <meta property="og:url" content="https://sybilmayard.tech/terms-and-conditions/" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -32,7 +35,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/terms-and-conditions" />
+        <link rel="canonical" href="https://sybilmayard.tech/terms-and-conditions/" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
@@ -43,7 +46,7 @@
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://stm-2018.github.io/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -51,17 +54,17 @@
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="events.html">Events</a>
-                    <a href="building-business-shopify.html">Shopify Course</a>                   
+                    <a href="https://stm-2018.github.io/events">Events</a>
+                    <a href="https://stm-2018.github.io/building-business-shopify">Shopify Course</a>                   
                     <div class="dropdown">
                         <button class="dropbtn">About
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="about.html">About</a>
-                            <a href="clients.html">Clients</a>
-                            <a href="services.html">Services</a>
-                            <a href="faqs.html">FAQs</a>
+                            <a href="https://stm-2018.github.io/about">About</a>
+                            <a href="https://stm-2018.github.io/clients">Clients</a>
+                            <a href="https://stm-2018.github.io/services">Services</a>
+                            <a href="https://stm-2018.github.io/faqs">FAQs</a>
                         </div>
                     </div>                    
                     <div class="dropdown">
@@ -69,10 +72,10 @@
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="vidcareer.html">VidCareer</a>
-                            <a href="an-android-app-for-an-educational-poker-platform.html">An Android App for an Educational Poker Platform</a>
-                            <a href="tagnav.html">TagNav</a>
-                            <a href="my-personal-portfolio.html">My Personal Portfolio</a>
+                            <a href="https://stm-2018.github.io/vidcareer">VidCareer</a>
+                            <a href="https://stm-2018.github.io/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
+                            <a href="https://stm-2018.github.io/tagnav">TagNav</a>
+                            <a href="https://stm-2018.github.io/my-personal-portfolio">My Personal Portfolio</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -80,13 +83,13 @@
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="6-reasons-to-use-shopify.html">6 Reasons Why You Should Be Using Shopify</a>
-                            <a href="webtip-wednesday-series-launched-on-twitter.html">WebTip Wednesday Series Launched on Twitter</a>
-                            <a href="5-best-tools-for-remote-working.html">5 Best Tools For Remote Working</a>
-                            <a href="6-tips-for-surviving-remote-working.html">6 Tips For Surviving Remote Working</a>
+                            <a href="https://stm-2018.github.io/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
+                            <a href="https://stm-2018.github.io/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
+                            <a href="https://stm-2018.github.io/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
+                            <a href="https://stm-2018.github.io/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
                         </div>
                     </div>
-                    <a href="contact.html">Contact</a>
+                    <a href="https://stm-2018.github.io/contact">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -169,7 +172,7 @@
 
                 <h3>5. Miscellaneous matters</h3>
                 <p>
-                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is at <a href="privacy-policy.html">https://sybilmayard.tech/privacy-policy</a>.<br>
+                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is at <a href="https://stm-2018.github.io/privacy-policy">https://sybilmayard.tech/privacy-policy</a>.<br>
                     5.2. If any term or provision of this agreement is at any time held by any jurisdiction to be void, invalid or unenforceable, then it shall be treated as changed or reduced, only to the extent minimally necessary to bring it within the laws of that jurisdiction and to prevent it from being void and it shall be binding in that changed or reduced form. Subject to that, each provision shall be interpreted as severable and shall not in any way affect any other of these terms.<br>
                     5.3. No failure or delay by any party to exercise any right, power or remedy will operate as a waiver of it nor indicate any intention to reduce that or any other right in the future.<br>
                     5.4. Any communication to be served on either party by the other shall be delivered by hand or sent by first class post or by e-mail.<br>
@@ -185,7 +188,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://stm-2018.github.io/contact">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -198,11 +201,11 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="about.html">About</a></p>
-                        <p><a href="services.html">Services</a></p>
-                        <p><a href="contact.html">Contact</a></p>
-                        <p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
-                        <p><a href="privacy-policy.html">Privacy Policy</a></p>
+                        <p><a href="https://stm-2018.github.io/about">About</a></p>
+                        <p><a href="https://stm-2018.github.io/services">Services</a></p>
+                        <p><a href="https://stm-2018.github.io/contact">Contact</a></p>
+                        <p><a href="https://stm-2018.github.io/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://stm-2018.github.io/privacy-policy">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
@@ -225,13 +228,13 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-Member-Logo-White.png" 
+                            <img src="https://stm-2018.github.io/images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
+                            <img src="https://stm-2018.github.io/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://stm-2018.github.io/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
