Update CSS file link

--- a/tagnav.html
+++ b/tagnav.html
@@ -25,7 +25,7 @@ permalink: /tagnav/
         <meta property="og:description" content="STagNav is an app concept which helps students find and attend social events, tackling the feelings of isolation and depression associated with uni life." />
         <meta property="og:url" content="https://sybilmayard.tech/tagnav/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="favicon.png" />
+        <meta property="og:image" content="https://stm-2018.github.io/favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -35,11 +35,11 @@ permalink: /tagnav/
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybilmayard.tech/tagnav/" />
-        <link rel="stylesheet" href="https://stm-2018.github.io/styles.css" type="text/css">
+        <link rel="stylesheet" href="https://sybilmayard.tech/styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="favicon.png">
+        <link rel="icon" type="image/png" href="https://stm-2018.github.io/favicon.png">
     </head>
     <body>
         <div class="header">
