--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -26,7 +26,7 @@ permalink: /terms-and-conditions/
             for SMEs in Shopify, Squarespace, WordPress and Wix. Read my terms and conditions here." />
         <meta property="og:url" content="https://sybilmayard.tech/terms-and-conditions/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="favicon.png" />
+        <meta property="og:image" content="https://stm-2018.github.io/favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -36,11 +36,11 @@ permalink: /terms-and-conditions/
         <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybilmayard.tech/terms-and-conditions/" />
-        <link rel="stylesheet" href="https://stm-2018.github.io/styles.css" type="text/css">
+        <link rel="stylesheet" href="https://sybilmayard.tech/styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="favicon.png">
+        <link rel="icon" type="image/png" href="https://stm-2018.github.io/favicon.png">
     </head>
     <body>
         <div class="header">
