--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -24,7 +24,7 @@ permalink: /6-tips-for-surviving-remote-working/
         <meta property="og:description" content="Working remotely is essential where possible, due to the current pandemic. Read my blog for tips and advice if you find working from home a struggle." />
         <meta property="og:url" content="https://sybilmayard.tech/6-tips-for-surviving-remote-working/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="favicon.png" />
+        <meta property="og:image" content="https://stm-2018.github.io/favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -34,11 +34,11 @@ permalink: /6-tips-for-surviving-remote-working/
         <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybilmayard.tech/6-tips-for-surviving-remote-working/" />
-        <link rel="stylesheet" href="https://stm-2018.github.io/styles.css" type="text/css">
+        <link rel="stylesheet" href="https://sybilmayard.tech/styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="favicon.png">
+        <link rel="icon" type="image/png" href="https://stm-2018.github.io/favicon.png">
     </head>
     <body>
         <div class="header">
